syntax = "proto3";
option java_package = "com.aatorque.datastore";
option java_multiple_files = true;

enum MaxControl {
  OFF = 0;
  MIN = 1;
  MAX = 2;
}

message Display {
  string pid = 1;
  bool showLabel = 2;
  string label = 3;
  string icon = 4;
  int32 minValue = 9;
  int32 maxValue = 10;
  string unit = 12;
  bool enableScript = 13;
  string customScript = 14;
  bool wholeNumbers = 15;
  bool ticksActive = 21;
  MaxControl maxValuesActive = 22;
  MaxControl maxMarksActive = 23;
  bool highVisActive = 19;
}

message Screen {
  string title = 5;
  repeated Display gauges = 6;
  repeated Display displays = 7;
}

message UserPreference {
  int32 currentScreen = 11;
  bool showChart = 22;
  repeated Screen screens = 8;
  string selectedTheme = 16;
  string selectedFont = 17;
  string selectedBackground = 18;
  bool rotaryInput = 20;
  bool centerGaugeLarge = 21;
}